log
Fri Mar 20 06:05:05 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
8864187
Fri Mar 20 06:11:29 PM UTC 2026: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:82:15: error: ‘P3’ undeclared (first use in this function); did you mean ‘P2’?
   82 |          push(P3,top(P1));
      |               ^~
      |               P2
exercises.c:82:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:89:17: error: expected ‘;’ before ‘}’ token
   89 |          pop(P2)
      |                 ^
      |                 ;
   90 |       }
      |       ~          
exercises.c:79:12: error: unused variable ‘aux’ [-Werror=unused-variable]
   79 |    Stack  *aux = create_stack();
      |            ^~~
cc1: all warnings being treated as errors
641bba0
Fri Mar 20 06:12:18 PM UTC 2026: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:88:18: error: expected ‘;’ before ‘}’ token
   88 |          pop(aux)
      |                  ^
      |                  ;
   89 |       }
      |       ~           
5589525
Fri Mar 20 06:12:33 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
93e00b5
Fri Mar 20 06:14:18 PM UTC 2026: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
974d05e
Sun Mar 22 07:27:04 PM UTC 2026: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|4
total_score: 10/70
5ab20a0
